[gd_scene load_steps=4 format=3 uid="uid://dwnbqg7jkerxt"]

[ext_resource type="Script" uid="uid://kugntnflplfd" path="res://Areas/room_area.gd" id="1_1854p"]
[ext_resource type="PackedScene" uid="uid://byaai03am4ecg" path="res://Objects/invincible_wall.tscn" id="1_of82g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r42if"]
size = Vector2(746, 426)

[node name="RoomArea" type="Area2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource("1_1854p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(305, 196)
shape = SubResource("RectangleShape2D_r42if")
debug_color = Color(0.761746, 0.587091, 0.22888, 0.42)

[node name="RightWall" parent="CollisionShape2D" instance=ExtResource("1_of82g")]
position = Vector2(385, -8)
rotation = -3.14159

[node name="LeftWall" parent="CollisionShape2D" instance=ExtResource("1_of82g")]
position = Vector2(-387, 2)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
